Resolves: tdf#91864 unset a dying childwindow as the active window

Change-Id: Ief014895facbc092913b3069ed04cace1e233ff0