sfx2/source/inc/workwin.hxx
@@ -322,6 +322,7 @@ public:
     bool                    IsVisible_Impl( sal_uInt16 nMode ) const;
     bool                    IsFloating( sal_uInt16 nId );
     void                    SetActiveChild_Impl( vcl::Window *pChild );
+    VclPtr<vcl::Window>     GetActiveChild_Impl() const { return pActiveChild; }
     bool                    ActivateNextChild_Impl( bool bForward = true );
     bool                    AllowChildWindowCreation_Impl( const SfxChildWin_Impl& i_rCW ) const;
 
